CICO-34398 fixing button alignment issue in zest station admin screen

--- a/zest_station/css/themes/yotel/theme.less
+++ b/zest_station/css/themes/yotel/theme.less
@@ -505,6 +505,9 @@
     right:9%;
 }
 #actions {
+    .button-left-margin{
+        margin-left: 40px;
+    }
     &.languages {
         .language {
             box-shadow: inset 0 0 0 4px #dededc;
